# AI_Log_Analyzer

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  logs.py  users.py
backend/app/core/: config.py  log_analyzer.py  security.py
backend/app/database/: db.py
backend/app/models/: __init__.py  log.py  user.py
backend/app/schemas/: log.py  log_analysis.py  user.py
backend/app/scripts/: seed_database.py  seed_test_logs.py  seed_test_user.py
backend/app/scripts/fixtures/: load_sample_logs.py
backend/app/tests/fixtures/: sample_logs.json
backend/app/utils/: prompts.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: auth.js  axios.js  logs.js
frontend/src/components/: RequireAuth.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  SignupPage.jsx
